@@ -6,6 +6,7 @@ This project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.htm
 
 ## [Unreleased]
 ### Added:
+ - [fpavogt, 2021-12-15] Add `msa` to `plots.diagnostic`, i.e. fix #22.
  - [fpavogt, 2021-12-10] Add Minimum Sector Altitude to the metar_msg() method.
  - [fpavogt, 2021-12-10] Add detailed examples to the core functions, and link them in the doc.
  - [fpavogt, 2021-12-10] Add the performance module, and a dedicated high level entry point.
@@ -20,6 +21,7 @@ This project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.htm
  - [fpavogt, 2021-12-06] Setup docs, including instructions and a CI/CD "check" Action.
  - [fpavogt, 2021-12-06] Initial Github upload, incl. CI/CD actions, package & test infrastructure.
 ### Fixed:
+ - [fpavogt, 2021-12-15] Fix bug in `CeiloChunk.metar_msg()` when all clouds are above the MSA.
  - [fpavogt, 2021-12-12] Fix the format_slices() method of the DiagnosticPlot class.
  - [fpavogt, 2021-12-09] Fix #5.
  - [fpavogt, 2021-12-08] Fix #14.
